cmake_minimum_required(VERSION 3.19)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(144 BinaryTree/144.cpp)
add_executable(145 BinaryTree/145.cpp)
add_executable(94 BinaryTree/94.cpp)
add_executable(102 BinaryTree/102.cpp)
add_executable(107 BinaryTree/107.cpp)
add_executable(199 BinaryTree/199.cpp)
add_executable(637 BinaryTree/637.cpp)
add_executable(429 BinaryTree/429.cpp)
add_executable(515 BinaryTree/515.cpp)
add_executable(116 BinaryTree/116.cpp)
add_executable(117 BinaryTree/117.cpp)
add_executable(104 BinaryTree/104.cpp)
add_executable(111 BinaryTree/111.cpp)
add_executable(226 BinaryTree/226.cpp)
add_executable(589 BinaryTree/589.cpp)
add_executable(590 BinaryTree/590.cpp)
add_executable(101 BinaryTree/101.cpp)
add_executable(100 BinaryTree/100.cpp)
add_executable(572 BinaryTree/572.cpp)
add_executable(559 BinaryTree/559.cpp)
add_executable(222 BinaryTree/222.cpp)
add_executable(110 BinaryTree/110.cpp)
add_executable(257 BinaryTree/257.cpp)
add_executable(404 BinaryTree/404.cpp)
add_executable(513 BinaryTree/513.cpp)
add_executable(112 BinaryTree/112.cpp)
add_executable(113 BinaryTree/113.cpp)
add_executable(106 BinaryTree/106.cpp)
add_executable(105 BinaryTree/105.cpp)
add_executable(654 BinaryTree/654.cpp)
add_executable(617 BinaryTree/617.cpp)
add_executable(700 BinaryTree/700.cpp)
add_executable(98 BinaryTree/98.cpp)
add_executable(530 BinaryTree/530.cpp)
add_executable(501 BinaryTree/501.cpp)
add_executable(236 BinaryTree/236.cpp)
add_executable(235 BinaryTree/235.cpp)
add_executable(701 BinaryTree/701.cpp)
add_executable(450 BinaryTree/450.cpp)
add_executable(669 BinaryTree/669.cpp)
add_executable(108 BinaryTree/108.cpp)
add_executable(538 BinaryTree/538.cpp)