cmake_minimum_required(VERSION 3.19)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(144 BinaryTree/144.cpp)
add_executable(145 BinaryTree/145.cpp)
add_executable(94 BinaryTree/94.cpp)
add_executable(102 BinaryTree/102.cpp)
add_executable(107 BinaryTree/107.cpp)
add_executable(199 BinaryTree/199.cpp)
add_executable(637 BinaryTree/637.cpp)
add_executable(429 BinaryTree/429.cpp)
add_executable(515 BinaryTree/515.cpp)
add_executable(116 BinaryTree/116.cpp)
add_executable(117 BinaryTree/117.cpp)
add_executable(104 BinaryTree/104.cpp)
add_executable(111 BinaryTree/111.cpp)
add_executable(226 BinaryTree/226.cpp)
add_executable(589 BinaryTree/589.cpp)
add_executable(590 BinaryTree/590.cpp)
add_executable(101 BinaryTree/101.cpp)
add_executable(100 BinaryTree/100.cpp)
add_executable(572 BinaryTree/572.cpp)
add_executable(559 BinaryTree/559.cpp)
add_executable(222 BinaryTree/222.cpp)
add_executable(110 BinaryTree/110.cpp)
add_executable(257 BinaryTree/257.cpp)
add_executable(404 BinaryTree/404.cpp)
add_executable(513 BinaryTree/513.cpp)
add_executable(112 BinaryTree/112.cpp)
add_executable(113 BinaryTree/113.cpp)
add_executable(106 BinaryTree/106.cpp)
add_executable(105 BinaryTree/105.cpp)
add_executable(654 BinaryTree/654.cpp)
add_executable(617 BinaryTree/617.cpp)
add_executable(700 BinaryTree/700.cpp)
add_executable(98 BinaryTree/98.cpp)
add_executable(530 BinaryTree/530.cpp)
add_executable(501 BinaryTree/501.cpp)
add_executable(236 BinaryTree/236.cpp)
add_executable(235 BinaryTree/235.cpp)
add_executable(701 BinaryTree/701.cpp)
add_executable(450 BinaryTree/450.cpp)
add_executable(669 BinaryTree/669.cpp)
add_executable(108 BinaryTree/108.cpp)
add_executable(538 BinaryTree/538.cpp)
add_executable(797 Graph/797.cpp)
add_executable(200 Graph/200.cpp)
add_executable(695 Graph/695.cpp)
add_executable(1020 Graph/1020.cpp)
add_executable(130 Graph/130.cpp)
add_executable(417 Graph/417.cpp)
add_executable(827 Graph/827.cpp)
add_executable(127 Graph/127.cpp)
add_executable(841 Graph/841.cpp)
add_executable(463 Graph/463.cpp)
add_executable(1971 UnionFind/1971.cpp)
add_executable(684 UnionFind/684.cpp)
add_executable(685 UnionFind/685.cpp)
add_executable(test test.cpp)
add_executable(704 Array/704.cpp)
add_executable(69 Array/69.cpp)
add_executable(367 Array/367.cpp)
add_executable(27 Array/27.cpp)
add_executable(26 Array/26.cpp)
add_executable(283 Array/283.cpp)
add_executable(844 Array/844.cpp)
add_executable(977 Array/977.cpp)
add_executable(209 Array/209.cpp)
add_executable(904 Array/904.cpp)
add_executable(76 Array/76.cpp)
add_executable(59 Array/59.cpp)
add_executable(54 Array/54.cpp)
add_executable(203 LinkedList/203.cpp)
add_executable(707 LinkedList/707.cpp)
add_executable(206 LinkedList/206.cpp)
add_executable(24 LinkedList/24.cpp)
add_executable(19 LinkedList/19.cpp)
add_executable(160 LinkedList/160.cpp)
add_executable(142 LinkedList/142.cpp)
add_executable(242 Hash/242.cpp)
add_executable(349 Hash/349.cpp)
add_executable(202 Hash/202.cpp)
add_executable(1 Hash/1.cpp)
add_executable(454 Hash/454.cpp)
add_executable(383 Hash/383.cpp)
add_executable(344 String/344.cpp)
add_executable(541 String/541.cpp)
add_executable(15 Array/15.cpp)
add_executable(18 Array/18.cpp)
add_executable(28 String/28.cpp)
add_executable(459 String/459.cpp)
add_executable(offer5 String/offer5.cpp)
add_executable(151 String/151.cpp)
add_executable(offer58 String/offer58.cpp)
add_executable(232 List/232.cpp)
add_executable(225 List/225.cpp)
add_executable(20 List/20.cpp)
add_executable(1047 List/1047.cpp)
add_executable(150 List/150.cpp)
add_executable(347 List/347.cpp)